rendered/envs/alpha/grafana/ingressroute-grafana-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: grafana-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`grafana.lan.zebradil.dev`) || Host(`grafana.gray.lan.zebradil.dev`) || Host(`grafana.junior.lan.zebradil.dev`)
      services:
        - name: grafana
          port: http
